--- a/01 Docker&Kubernetes/01/package.json
+++ b/01 Docker&Kubernetes/01/package.json
@@ -17,6 +17,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "nodemon": "^3.0.3",
+    "@types/nodemon": "^1.19.6",
     "@babel/core": "^7.23.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
