--- a/01 Docker&Kubernetes/01/package.json
+++ b/01 Docker&Kubernetes/01/package.json
@@ -14,15 +14,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
-    "@types/nodemon": "^1.19.6",
     "@babel/core": "^7.23.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.19"
+    "@types/node": "^20.11.19",
+    "@types/nodemon": "^1.19.6",
+    "nodemon": "^3.0.3"
   }
 }
