--- a/01 Docker&Kubernetes/02/package.json
+++ b/01 Docker&Kubernetes/02/package.json
@@ -11,11 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "redis": "^4.6.13",
+    "redis": "^2.8.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
@@ -25,6 +24,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
     "@types/nodemon": "^1.19.6",
+    "@types/redis": "2.8.0",
     "nodemon": "^3.0.3"
   }
 }
