--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-*.xml linguist-detectable=true
-*.xml linguist-language=xml
+*.yml linguist-detectable=true
+*.yml linguist-language=YAML
+
+*.yaml linguist-detectable=true
+*.yaml linguist-language=YAML
