--- a/01 Docker&Kubernetes/02/docker-compose.yml
+++ b/01 Docker&Kubernetes/02/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3"
 services:
   redis-server:
     image: "redis"
+    restart: "on-failure"
   node-app:
+    restart: "on-failure"
     build: .
     ports:
       - "5000:5000"
