--- a/01 Docker&Kubernetes/03_front/package.json
+++ b/01 Docker&Kubernetes/03_front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +18,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "BROWSER=NONE react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,7 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
-  }
+  "devDependencies": {}
 }
