--- a/01 Docker&Kubernetes/04_complex/server/package.json
+++ b/01 Docker&Kubernetes/04_complex/server/package.json
@@ -11,16 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "redis": "^2.8.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.1",
