--- a/01 Docker&Kubernetes/04_complex/server/package.json
+++ b/01 Docker&Kubernetes/04_complex/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon index.ts",
-    "start": "NODE_ENV=production ts-node index.ts"
+    "dev": "nodemon index.ts",
+    "start": "ts-node index.ts"
   },
   "keywords": [],
   "author": "",
