Kubernetes course - commit 04

--- a/03 Kubernetes/01/my-first-nginx.yaml
+++ b/03 Kubernetes/01/my-first-nginx.yaml
@@ -5,4 +5,7 @@ metadata:
 spec:
   containers:
     - image: nginx:1.24.0
-      name: nginx
+      name: nginx # port: 80
+    - name: tomcat
+      image: tomcat:9.0-jdk17-temurin # port: 8080
+
