Kubernetes course - commit 23

--- a/03 Kubernetes/01/cronjob.yaml
+++ b/03 Kubernetes/01/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: probability-cronjob
 spec:
-  schedule: "*/1 * * * *"
+  schedule: "*/1 * * * *" # Every one minute!
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
